k8s/gateway/gateway-internal/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-internal
  labels:
    expose: internal
    trust.cert-manager.io/inject: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
