k8s/gateway/gateway-internal/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: gateway-internal
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gw
      namespace: gateway-internal
      sectionName: http-apex
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gw
      namespace: gateway-internal
      sectionName: http-wild
  hostnames:
    - home.arpa
    - "*.home.arpa"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
